2019-07-15  Dirk Eddelbuettel  <edd@debian.org>

	* R/datetime.R: Use registered in .Call(), skip package="..."
	* R/asDatePOSIXct.R: Idem

2018-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/datetime.c (validate_tm): Add one missing '#nocov end'

2018-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

	* README.md: Added dependencies badge

2018-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/datetime.c: Synchronized with R 3.5.1
	* src/attrib.c: Idem

2018-10-20  Joshua Ulrich  <josh.m.ulrich@gmail.com>

	* src/datetime.c: Added POSIXct2D based on two R Core functions
	* R/asDatePOSIXct.R: R wrapper for POSIXct2D
	* man/asDatePOSIXct: Documentation for asDatePOSIXct

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Minor Travis CI update

2017-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.0.3

	* inst/include/RApiDatetime.h: Remove two spurious variable uses

2017-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version and date

	* NAMESPACE: Also enable registration in useDynLib, explicitly export
	six R-level functions

2017-03-26  Dirk Eddelbuettel  <edd@debian.org>

        * LICENSE: Added to repository
        * .Rbuildignore: Do not include LICENSE in package

2017-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.0.2

	* README.md: Add Installation note, fix typo

	* inst/NEWS.Rd: Added

2017-03-25  Joshua Ulrich  <josh.m.ulrich@gmail.com>

	* src/datetime.c: Bugfix; now works on Windows
	* DESCRIPTION (OS_type): Remove restriction

2017-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.1

	* DESCRIPTION (OS_type): At least for now, unix only

2017-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* R/datetime.R: Add examples to all functions
	* man/rapistrptime.Rd: Ditto

	* src/datetime.c (asPOSIXlt): Bugfix
